...
          headerBackTitle: 'กลับ',
          headerBackButtonDisplayMode: 'minimal',
          contentStyle: { backgroundColor: colors.background },
        }}
      >
        <Stack.Screen name="(tabs)" options={{ headerShown: false }} />
        <Stack.Screen name="events/[id]" options={{ title: 'รายละเอียดกิจกรรม' }} />
        <Stack.Screen name="trip" options={{ title: 'My Trip' }} />
        <Stack.Screen name="about" options={{ title: 'เกี่ยวกับผู้พัฒนา' }} />
        <Stack.Screen name="camera" options={{ title: 'Camera' }} />
        <Stack.Protected guard={session.status === 'anonymous'}>
          <Stack.Screen name="login" options={{ title: 'เข้าสู่ระบบ' }} />
          <Stack.Screen name="signup" options={{ title: 'สมัครสมาชิก' }} />
...
