appId: com.sojjyu.khonkaenpoi
---
- launchApp
- assertVisible: "My Trip"
- tapOn: "Reminder"
- assertVisible: "กิจกรรม"
- tapOn: "ดูรายละเอียดและตั้งเตือน"
- assertVisible: "รายละเอียดกิจกรรม"
